--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.38.0"
